// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group css-53sr0l"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1163fmc"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="css-k9b0kj"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item wp-components-flex-block css-13400lq"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Let It
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1cmhu4"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="css-1khrkm8"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item wp-components-flex-block css-13400lq"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Go
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;

exports[`props should render mixed control types 1`] = `
<div
  class="wp-components-view wp-components-flex wp-components-control-group css-53sr0l"
  data-g2-c16t="true"
  data-g2-component="ControlGroup"
>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1163fmc"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-select css-tpx9mv"
      data-g2-c16t="true"
      data-g2-component="Select"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-b4041i"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <select
          class="css-exabpr"
          data-g2-c16t="true"
          data-g2-component="SelectInput"
          id="salutations"
        />
      </div>
      <div
        class="wp-components-flex-item css-19xoami"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <span
          class="wp-components-text css-ckswz2"
          data-g2-c16t="true"
          data-g2-component="Text"
        >
          <div
            class="wp-components-icon css-1tw4gp0"
            data-g2-c16t="true"
            data-g2-component="Icon"
          >
            <svg
              fill="none"
              height="14"
              size="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="6 9 12 15 18 9"
              />
            </svg>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-5qryon"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <div
      class="wp-components-view wp-components-flex wp-components-base-field wp-components-text-input css-1it8skp"
      data-g2-c16t="true"
      data-g2-component="TextInput"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-4z9ate"
        data-g2-c16t="true"
        data-g2-component="TextInputContent"
      >
        <input
          class="css-pgzgex"
          data-g2-c16t="true"
          data-g2-component="TextInputInput"
          id="fname"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="wp-components-flex-item wp-components-control-group-item css-1cmhu4"
    data-g2-c16t="true"
    data-g2-component="ControlGroupItem"
  >
    <button
      aria-busy="false"
      class="css-1khrkm8"
      data-destructive="false"
      data-g2-c16t="true"
      data-g2-component="Button"
      data-icon="false"
      type="button"
    >
      <span
        class="wp-components-view wp-components-flex css-2r7rsp"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <span
          class="wp-components-flex-item wp-components-flex-block css-13400lq"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Let It
        </span>
      </span>
      <span
        class="wp-components-elevation css-h443as"
        data-g2-c16t="true"
        data-g2-component="ButtonElevation"
      />
    </button>
  </div>
</div>
`;
